--- a/youtube3.html
+++ b/youtube3.html
@@ -18,9 +18,9 @@
 
     <h2>Criadores que participam</h2>
     <ul class="youtubers">
-      <li>👉 Nome do Youtuber 1</li>
-      <li>👉 Nome do Youtuber 2</li>
-      <li>👉 Nome do Youtuber 3</li>
+      <li>👉 @Mih_Estelar</li>
+      <li>👉@sakurauchiha2493</li>
+      <li>👉 @katreiss</li>
     </ul>
 
     <a href="pagina2.html">Voltar</a>
